Fixed overflowing height of floating buttons
WordPress 5.4 added new default styles causing the floating button to grow to large.

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -79,6 +79,7 @@
 	line-height: 20px;
 	height: 22px;
 	margin-top: -11px;
+	min-height: initial;
 }
 
 .acf-field .button.floating:active {
